--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "rx": "^4.0.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
